# Phonetik

./: .gitignore  README.md  pyproject.toml
src/: constants.py  main.py
src/phonetik/: __init__.py  constants.py  main.py
src/text2NATO/: __init__.py  constants.py  main.py
src/text2nato.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_main.py
text2nato.egg-info/: PKG-INFO  SOURCES.txt
