[project]
name = "text2nato"
version = "1.1.1"
description = "Transform text into the NATO phonetic alphabet for oral transmission."
readme = "README.md"
authors = [
    { name = "Brandon Leon" }
]
requires-python = ">=3.11"
dependencies = [
    "rich==13.9.3",
    "typer>=0.12.5",
]

[tool.uv]
dev-dependencies = [
    "icecream>=2.1.3",
]

[project.scripts]
text2nato = "main:main"

[tool.bumpversion]
current_version = "1.1.1"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = false
message = "Bump version: {current_version} → {new_version}"
commit_args = ""
setup_hooks = []
pre_commit_hooks = []
post_commit_hooks = []


# Specify the lines to be updated using search and replace
[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "src/constants.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""
