[project]
name = "text2nato"
version = "1.3.0"
description = "Transform text into the NATO phonetic alphabet for oral transmission."
readme = "README.md"
authors = [
    { name = "Brandon Leon" }
]
requires-python = ">=3.11"
dependencies = [
    "rich==13.9.3",
    "typer>=0.12.5",
]

[tool.uv]
dev-dependencies = [
    "icecream>=2.1.3",
]

[project.scripts]
text2nato = "text2NATO.main:app"
[tool.ruff]
line-length = 88
target-version = "py311"
# Enable import order checking
lint.extend-ignore = []
lint.select = ["I", "F"]  # 'I' for import-related checks, 'F' for formatting-related checks

[tool.bumpversion]
current_version = "1.3.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = false
message = "Bump version: {current_version} → {new_version}"
commit_args = ""
setup_hooks = []
pre_commit_hooks = []
post_commit_hooks = []


# Specify the lines to be updated using search and replace
[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'
